--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ li a:hover:not(.active) {
  .input-container {
    border: 2px dotted black;
    display: flex;
-   justify-content: center;
+   justify-content: flex-end;
    width: 210px;
    height: 250px;
   
