--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ li a:hover:not(.active) {
  }
  
  
- .input-container {
+ #input-container {
    display: flex;
    justify-content: space-between;
    width: 210px;
@@ -143,7 +143,7 @@ li a:hover:not(.active) {
  } 
  
  .insert {
-   display: block;
+   
    padding-left:20px;
    margin: 20px;
    border: 2px dotted black;
