automatically backed up by learn

--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ li a:hover:not(.active) {
  } 
  
  .insert {
-   
+   display: block;
    padding-left:20px;
    margin: 20px;
    border: 2px dotted black;
