--- a/style.css
+++ b/style.css
@@ -136,7 +136,8 @@ li a:hover:not(.active) {
  #input-container {
    display: flex;
    justify-content: center;
-   
+   width: 210px;
+   height: 250px;
    background-color: blue;
  } 
  
