--- a/style.css
+++ b/style.css
@@ -134,11 +134,10 @@ li a:hover:not(.active) {
  
  
  #input-container {
-   display: flex;
-   justify-content: center;
-   width: 210px;
-   height: 250px;
-   background-color: blue;
+   margin: auto;
+    width: 60%;
+    border: 3px solid #73AD21;
+    padding: 10px;
  } 
  
  .insert {
