--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ li a:hover:not(.active) {
     width: 30%;
     border: 3px solid #73AD21;
     padding: 10px;
-    z-index: 4;
+    z-index: ;
  } 
  
  .insert {
