--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ li a:hover:not(.active) {
  
  #input-container {
    display: flex;
-   justify-content: left;
+   justify-content: center;
     margin: auto;
     width: 15%;
     border: 2px solid #73AD21;
