--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ li a:hover:not(.active) {
  #input-container {
    display: flex;
    justify-content: center;
+   align-items: right;
     margin: auto;
     width: 15%;
     border: 2px solid #73AD21;
