--- a/style.css
+++ b/style.css
@@ -122,9 +122,7 @@ li a:hover:not(.active) {
  
  
  #input-container {
-   display: flex;
-   justify-content: center;
-   align-items: right;
+   float: right;
     margin: auto;
     width: 15%;
     border: 2px solid #73AD21;
