--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ li a:hover:not(.active) {
     border: 2px solid #73AD21;
     padding: 20px;
     z-index: 4;
+    background-image: url();
  } 
  
  .insert {
