automatically backed up by learn

--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ li a:hover:not(.active) {
     border: 2px solid #73AD21;
     padding: 20px;
     z-index: 4;
-    background-image: url();
+    background-image: url("https://i.pinimg.com/originals/71/d8/28/71d828c3ca9135c1e810021366651726.png");
  } 
  
  .insert {
