--- a/style.css
+++ b/style.css
@@ -129,6 +129,7 @@ li a:hover:not(.active) {
     padding: 20px;
     z-index: 4;
     background-image: url("https://i.pinimg.com/originals/71/d8/28/71d828c3ca9135c1e810021366651726.png");
+    background-size: cover;
  } 
  
  .insert {
