--- a/style.css
+++ b/style.css
@@ -125,6 +125,7 @@ li a:hover:not(.active) {
    float: right;
     margin: auto;
     width: 30%;
+    height: 60%;
     border: 2px solid #73AD21;
     padding: 20px;
     z-index: 4;
