automatically backed up by learn

--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ li a:hover:not(.active) {
  
  .insert {
    display: block;
+   justify-content: center;
    padding-left:20px;
    margin: 20px;
    border: 1px solid #73AD21;
