--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@ p {
     width: 40%;
     padding: 12px 20px;
     margin: 8px 0;
-    
 }
  
  
@@ -136,4 +135,11 @@ li a:hover:not(.active) {
    border: 2px solid #73AD21;
  }
  
+ 
+ .full-container {
+   
+   margin: auto;
+   width: 100%;
+   border: 2px solid #73AD21;
+ }
  
