--- a/style.css
+++ b/style.css
@@ -140,6 +140,6 @@ li a:hover:not(.active) {
    
    margin: auto;
    width: 100%;
-   border: 2px solid #73AD21;
+   border: 1px dotted #73AD21;
  }
  
