automatically backed up by learn

--- a/style.css
+++ b/style.css
@@ -137,9 +137,13 @@ li a:hover:not(.active) {
  
  
  .full-container {
-   
    margin: auto;
    width: 100%;
    border: 1px dotted #73AD21;
+ }
+ 
+ .left {
+   float: left;
+   width: 50%;
  }
  
