--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ li a:hover:not(.active) {
  #input-container {
     width: 0%;
     height: 100%;
-    
+    padding: 20px;
     background-image: url("https://i.pinimg.com/originals/71/d8/28/71d828c3ca9135c1e810021366651726.png");
     background-size: cover;
  } 
