--- a/style.css
+++ b/style.css
@@ -135,6 +135,7 @@ li a:hover:not(.active) {
  .full-container {
    margin: auto;
    width: 100%;
+   height: 900px;
    border: 1px dotted #73AD21;
  }
  
