--- a/style.css
+++ b/style.css
@@ -142,10 +142,12 @@ li a:hover:not(.active) {
  .left {
    float: left;
    width: 45%;
+   background-color: blue;
  }
  
  .right {
    float: right;
+   background-color: red;
    width: 45%;
  }
  
