automatically backed up by learn

--- a/style.css
+++ b/style.css
@@ -38,6 +38,13 @@ p {
   text-decoration: none;
 }
 
+.full-container {
+  height: 700px;
+  width: 1250px;
+  border: 2px dotted red;
+  
+}
+
 
 .container {
   display: flex;
