--- a/style.css
+++ b/style.css
@@ -85,11 +85,8 @@ li a:hover:not(.active) {
     background-color: #111;
 }
 
-.active {
-    background-color: #4CAF50;
-}  
+
     
- 
  form {
    padding-left: 10px;
  }
@@ -110,5 +107,11 @@ li a:hover:not(.active) {
    float: right;
    background-color: red;
    width: 50%;
+ }
+ 
+ 
+  footer { 
+    text-align: left;
+     padding-left: 150px;
  }
  
