--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@ li a:hover:not(.active) {
     padding: 20px;
     background-image: url("https://i.pinimg.com/originals/71/d8/28/71d828c3ca9135c1e810021366651726.png");
     background-size: cover;
+    height: 100%;
  } 
  
  .left {
@@ -90,6 +91,6 @@ li a:hover:not(.active) {
  
   footer { 
     text-align: left;
-     padding-left: 150px;
+    padding-left: 150px;
  }
  
