--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ li a:hover:not(.active) {
     padding: 20px;
     background-image: url("https://i.pinimg.com/originals/71/d8/28/71d828c3ca9135c1e810021366651726.png");
     background-size: cover;
-    height: 40px;
+    height: 100%;
     
  } 
  
