--- a/style.css
+++ b/style.css
@@ -72,8 +72,7 @@ li a:hover:not(.active) {
  #input-container {
     padding: 20px;
     background-image: url("https://i.pinimg.com/originals/71/d8/28/71d828c3ca9135c1e810021366651726.png");
-
-    background-size: 20%;
+    background-size: cover ;
     height: 100%;
     
  } 
