automatically backed up by learn

--- a/style.css
+++ b/style.css
@@ -1,14 +1,21 @@
+/* universial */
+
 body {
     background-color: white;
     font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif; 
 }
+
+/* header */
 
 .top-page {
   text-align: center;
   padding: 20px;
 }
 
-
+span {
+  text-align: center;
+  font-size: 40px;
+}
 
 h1, h4 {
   text-align: center;
