--- a/style.css
+++ b/style.css
@@ -36,7 +36,15 @@ p {
 
 }
  
-
+ 
+ ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    
+}
 
 li {
     float: left;
