--- a/style.css
+++ b/style.css
@@ -53,7 +53,9 @@ p {
 
 #input-container {
     background-image: url("https://i.pinimg.com/originals/71/d8/28/71d828c3ca9135c1e810021366651726.png");
-    background-size: cover ;
+    background-size: contain ;
+    background-repeat: no-repeat;
+    background-position: center;
     height: 100%;
     
  } 
